# 2025-riscv-ime-poc

./: .gitignore  CMakeLists.txt  README.md  devbox.json  shell.nix
scripts/: build.sh  clean.sh  init.sh  run-qemu.sh  set-env.sh  spacemit_runner.sh
scripts/spacemit-install/: common.sh  spacemit-ai-sdk.sh  spacemit-toolchain.sh
src/: main.cpp
src/asm/naive/: matmul_naive_float.S  matmul_naive_int8.S
src/asm/naive/int/: matmul_naive_int16.S  matmul_naive_int32.S  matmul_naive_int8.S
src/asm/vector/: matmul_vector_float.S  matmul_vector_int8.S
src/asm/vector/int/: matmul_vector_int16.S  matmul_vector_int32.S  matmul_vector_int8.S
src/hpp/: matmul.h  matrix.h
tests/: CMakeLists.txt  test_matmul.cpp
